# tuxmino

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  build.bat  build.sh  config.ini  debug.sh  gdbinit  main.c  makefile
dependencies/lua/: CMakeLists.txt  Makefile  cmake_install.cmake
dependencies/raylib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
dependencies/raylib/raylib/: CTestTestfile.cmake  Makefile  cmake_install.cmake  libraylib.so.4.2.0  raylib.pc
gamemodes/: death.lua  game.lua  instinct.lua  kicks.lua  master.lua  tutorial.lua
src/: config.c  credits.c  draw.c  draw.h  engine.c  engine.h  gamemodes.c  main.c  main.h  piece.c  piece.h  replay.c  timer.c  timer.h  timings.c  tuxmino.h
